# game-capture

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  vp9-alpha-plan.md
.github/workflows/: qa-fast-gate.yml  qa-nightly-soak.yml
docs/: RELEASES.md  ffmpeg-alpha-release-plan.md  gamecapture.html  index.html  local-control-api.md  native-streaming-flow-map.md  obs-ninja-plugin-testing.md  spout2-source-plan.md
native-qt/: CMakeLists.txt  _build.bat  _build2.bat  build-app.bat  build-capture.bat  build-now.bat  build-portable.bat  build-static.bat  build-test.bat  build-tests.bat  build.ps1  build_test_enc.ps1  build_windows.bat  check-abi.bat  configure-static.bat  do-build.bat  fullrebuild.bat  installer.nsi  package-lock.json  package.json  portable-sfx-config.txt  rebuild.bat  reconfigure.bat  run-all-tests-verbose.bat  run-build.bat  run-single-test.bat  run-smoke-test.bat  run-tests.bat  run-ws-test.bat  test-api-ws.js  test-vdo-fixed.js  test-vdo-ws-long.js  test-vdo-ws.js  test-ws.ps1
native-qt/e2e/: bitrate-smoke.js  chrome-fps-verify.js  collision-e2e.js  control-e2e.js  director-room-e2e.js  dual-quality-churn-e2e.js  dual-quality-e2e.js  dual-quality-init-fuzz-e2e.js  dual-quality-requirements-e2e.js  dual-quality-soak.js  ice-connectivity-e2e.js  refresh-e2e.js  stream-e2e.js  stream-matrix.js  stream-soak.js  viewer-churn-e2e.js
native-qt/include/versus/app/: dual_stream_policy.h  versus_app.h
native-qt/include/versus/audio/: opus_encoder.h  window_audio_capture_core.h
native-qt/include/versus/control/: local_control_server.h
native-qt/include/versus/diagnostics/: crash_reporter.h
native-qt/include/versus/signaling/: vdo_signaling.h
native-qt/include/versus/ui/: main_window.h  stats_panel.h  window_list_widget.h
native-qt/include/versus/video/: aspect_fit.h  spout_capture.h  video_encoder.h  window_capture.h
native-qt/include/versus/webrtc/: ice_config.h  webrtc_client.h
native-qt/qa/: DUAL_STREAM_PLAN.md  DUAL_STREAM_TEST_REQUIREMENTS.md  PHASE2_TEST_PLAN.md  PHASE2_TEST_REQUIREMENTS.md  TEST_PLAN.md  TEST_REQUIREMENTS.md  build-release.ps1  e2e-capture-source.ps1  profile-media-player-fps.js  profile-youtube-fps.js  release-and-publish.ps1  run-fast-gate.ps1  run-nightly-soak.ps1  run-release-readiness.ps1  sign-artifacts.ps1  submit-virustotal.ps1
native-qt/resources/: app.rc  resources.qrc
native-qt/src/: main.cpp  test_encryption.cpp  test_stream.cpp  test_websocket.cpp
native-qt/src/app/: dual_stream_policy.cpp  versus_app.cpp
native-qt/src/audio/: opus_encoder.cpp  window_audio_capture_core.cpp
native-qt/src/control/: local_control_server.cpp
native-qt/src/diagnostics/: crash_reporter.cpp
native-qt/src/signaling/: vdo_signaling.cpp
native-qt/src/ui/: main_window.cpp  stats_panel.cpp  window_list_widget.cpp
native-qt/src/video/: spout_capture.cpp  video_encoder.cpp  window_capture.cpp
native-qt/src/webrtc/: ice_config.cpp  vp9_rtp_packetizer.h  webrtc_client.cpp
native-qt/tests/: bench_video_encoder.cpp  ffmpeg_probe_hang_helper.cpp  spout_test_sender.cpp  test_crash_reporter.cpp  test_dual_stream_policy.cpp  test_ice_config.cpp  test_local_control_server.cpp  test_main_window.cpp  test_opus_encoder.cpp  test_spout_capture.cpp  test_stats_panel.cpp  test_vdo_signaling.cpp  test_webrtc_client.cpp  test_window_capture.cpp  test_window_list_widget.cpp
native-qt/tools/: fetch-ffmpeg-lgpl.ps1
